# Sol-Loan-a-NFT

./: README.md  package-lock.json  package.json  wallet2.json
client/: main.ts
extras/: nft.ts
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instructions.rs  lib.rs  processor.rs  state.rs
