[package]
name = "nftloans"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.10.26"
thiserror = "1.0.24"
borsh = "0.9.1"
borsh-derive = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
spl-token = { version="3.3.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="1.0.5", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.10.26"
solana-sdk = "1.10.26"

[lib]
crate-type = ["cdylib", "lib"]